prevent image from making the page too long

--- a/apps/consent-ui/src/components/Layouts/SideImageLayout/SideImageLayout.module.scss
+++ b/apps/consent-ui/src/components/Layouts/SideImageLayout/SideImageLayout.module.scss
@@ -12,7 +12,7 @@
 	background-image: linear-gradient(
 		270deg,
 		theme('colors.other.400'),
-		theme('colors.secondary.500') 95.05%
+		theme('colors.secondary.500')
 	);
 	padding: 1rem;
 	margin-bottom: 1.88rem;
@@ -50,9 +50,17 @@
 	max-width: 32.8125rem;
 	background: theme('colors.grayscale.800');
 	position: relative;
-	// height: 100%;
+	overflow: hidden;
+	min-height: 600px;
+	@media (min-width: theme('screens.lg')) {
+		min-height: 700px;
+	}
 	.sidebarContent {
 		padding: 2.5rem;
+		position: absolute;
+		inset: 0;
+	}
+	.sidebarImage {
 		position: absolute;
 		inset: 0;
 	}
